[package]
name = "pitaya-go"
version = "0.0.1"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
description = "Rust support for the makerdiary Pitaya Go development board"
keywords = ["arm", "cortex-m", "nrf52840", "hal"]
repository = "https://github.com/windoze/pitaya-go-rs"

[dependencies]
nrf52840-hal = "0.11"
nrf52840-pac = "0.9.0"

[dev-dependencies]
cortex-m-rt = "0.6"
panic-halt = "0.2"

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
